add test image to blog post

--- a/src/styles/blog/_post.scss
+++ b/src/styles/blog/_post.scss
@@ -42,8 +42,12 @@
     a {
       text-decoration: underline;
     }
-  
 
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  
   .post-nav {
     display: flex;
     justify-content: space-between;
