--- a/src/styles/blog/_mixins.scss
+++ b/src/styles/blog/_mixins.scss
@@ -37,6 +37,26 @@
 
       article {
         padding: 1rem;
+        display: flex;
+        gap: 1rem;
+        align-items: flex-start;
+
+        .post-thumbnail {
+          flex-shrink: 0;
+          width: 200px;
+          align-self: stretch;
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+          }
+        }
+        .post-meta {
+          flex: 1;
+          min-width: 0;
+        }
 
         h2 {
           margin: 0 0 0.75rem;
