--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from "astro:assets";
 interface Props {
   post: any;
   prev?: any;
@@ -27,6 +28,13 @@ function postUrl(p: any) {
       <time datetime={date.toISOString()}>{formattedDate}</time>
     </p>
     <h1>{title}</h1>
+    {
+      post.data.cover && post.data.coverAlt && (
+        <div class="post-cover">
+          <Image src={post.data.cover} alt={post.data.coverAlt} />
+        </div>
+      )
+    }
     {
       author && (
         <p>
