--- a/src/pages/demo.astro
+++ b/src/pages/demo.astro
@@ -8,7 +8,7 @@ const pageTitle = 'Demo';
 
 <p>The Universal Viewer includes a share dialog which lets you easily embed the viewer in other places. Here is an example:</p>
 
-<iframe src="http://universalviewer.dev/uv.html#?manifest=https%3A%2F%2Fwellcomelibrary.org%2Fiiif%2Fb18035723%2Fmanifest&c=0&m=0&cv=0&config=&locales=en-GB%3AEnglish+%28GB%29%2Ccy-GB%3ACymraeg%2Cfr-FR%3AFran%C3%A7ais+%28FR%29%2Cpl-PL%3APolski%2Csv-SE%3ASvenska&xywh=-3198%2C-744%2C8960%2C5024&r=0" width="560" height="420" allowfullscreen frameborder="0" title="Wunder der Vererbung / von Fritz Bolle."></iframe>
+<iframe src="https://universalviewer.dev/uv.html#?manifest=https%3A%2F%2Fwellcomelibrary.org%2Fiiif%2Fb18035723%2Fmanifest&c=0&m=0&cv=0&config=&locales=en-GB%3AEnglish+%28GB%29%2Ccy-GB%3ACymraeg%2Cfr-FR%3AFran%C3%A7ais+%28FR%29%2Cpl-PL%3APolski%2Csv-SE%3ASvenska&xywh=-3198%2C-744%2C8960%2C5024&r=0" width="560" height="420" allowfullscreen frameborder="0" title="Wunder der Vererbung / von Fritz Bolle."></iframe>
 
 <h2>Advanced Demo</h2>
 <p>Developers may want to see the <a href="https://universalviewer.dev">bleeding edge demo</a> or the <a href="https://uv-v4.netlify.app">latest stable demo</a>, which include more advanced controls for configuring and testing the viewer.</p>
