--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,33 +1,28 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.scss';
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import "../styles/global.scss";
 
 interface Props {
   pageTitle?: string;
   mainClass?: string;
 }
 
-const { pageTitle = 'Universal Viewer', mainClass } = Astro.props;
+const { pageTitle = "Universal Viewer", mainClass } = Astro.props;
 ---
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
-    <meta
-      name="viewport"
-      content="width=device-width"
-    />
-    <meta
-      name="generator"
-      content={Astro.generator}
-    />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
+    <slot name="head" />
   </head>
   <body>
     <Header />
-    <main class:list={['main', mainClass]}>
+    <main class:list={["main", mainClass]}>
       <slot />
     </main>
     <Footer />
