Make demo responsive

--- a/src/pages/demo/index.astro
+++ b/src/pages/demo/index.astro
@@ -27,7 +27,7 @@ const groups = collection.collections
         <div id="uv" class="uv"></div>
 
         <div id="controls">
-            <div class="controls-section">
+            <div class="controls-section" id="content-control">
                 <h3>Content</h3>
                 <select id="manifest-select">
                     {
@@ -51,7 +51,7 @@ const groups = collection.collections
                 </div>
             </div>
 
-            <div class="controls-section">
+            <div class="controls-section" id="customise">
                 <h3>Customise</h3>
                 <div class="checkbox-grid">
                     <label
@@ -94,7 +94,7 @@ const groups = collection.collections
                 </div>
             </div>
 
-            <div class="controls-section">
+            <div class="controls-section" id="advanced">
                 <h3>Advanced Demo</h3>
                 <p>
                     Developers may want to see the <a
