remove cy blog redirect to en version

--- a/src/components/MainNav.astro
+++ b/src/components/MainNav.astro
@@ -42,7 +42,7 @@ const t = useTranslations(lang);
     </li>
     <li class="main-nav-list-item">
       <a
-        href="/blog"
+        href={href('/blog')}
         class="main-nav-link"
         >{t('nav.blog')}</a
       >
