--- a/src/pages/cy/blog/[year]/[month]/[day]/[id].astro
+++ b/src/pages/cy/blog/[year]/[month]/[day]/[id].astro
@@ -2,13 +2,13 @@
 import { getCollection } from 'astro:content';
 
 export async function getStaticPaths() {
-  const posts = await getCollection("blog");
+  const posts = await getCollection('blog');
 
   return posts.map((post) => {
     const d = new Date(post.data.date);
     const year = d.getFullYear().toString();
-    const month = String(d.getMonth() + 1).padStart(2, "0");
-    const day = String(d.getDate()).padStart(2, "0");
+    const month = String(d.getMonth() + 1).padStart(2, '0');
+    const day = String(d.getDate()).padStart(2, '0');
 
     return {
       params: {
@@ -19,17 +19,19 @@ export async function getStaticPaths() {
       },
       props: { target: `/blog/${year}/${month}/${day}/${post.id}` },
     };
- });
+  });
 }
 
 const { target } = Astro.props;
 ---
 
-<head>
+<!-- <head>
   <meta http-equiv="refresh" content={`0; url=${target}`} />
   <meta name="robots" content="noindex" />
   <link rel="canonical" href={target} />
 </head>
 <body>
   <a href={target}>Redirecting to main blog...</a>
-</body>
+</body> -->I
+used to redirect. Now I need to show the blog post selected, regardless of
+whether it's in CY or not
