--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,12 @@
 ---
-import { getLangFromUrl, useTranslations } from '@i18n/utils';
-const locale = Astro.currentLocale;
-const urlPrefix = locale === 'en' ? '' : `/${locale}`;
-const currentPath = Astro.url.pathname;
-const href = (p: string) => `${urlPrefix}${p}`;
-const currentPathWithoutLocale = currentPath.replace(urlPrefix, '') || '/';
+import { useTranslations } from '@i18n/utils';
+import type { Lang } from '@i18n/ui';
 
-const lang = getLangFromUrl(Astro.url);
-const t = useTranslations(lang);
+const locale = Astro.currentLocale as Lang;
+const t = useTranslations(locale);
+
+const urlPrefix = locale === 'en' ? '' : `/${locale}`;
+const href = (p: string) => `${urlPrefix}${p}`;
 ---
 
 <footer>
