--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,13 +19,9 @@ const homeUrl = getRelativeLocaleUrl(locale, '');
 <header class="site-header">
   <a
     href={homeUrl}
-    class="logo-link"
+    class="dm-sans-500-normal logo-link"
   >
-    <img
-      src=""
-      alt=""
-      class="logo-image"
-    />
+    <span>UV</span>
   </a>
   <button
     type="button"
