--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -13,11 +13,24 @@
 
 .logo-link {
   display: block;
-  width: remval(64);
-  height: remval(64);
-  background: #fff;
-  border-radius: 50%;
+  height: remval(72);
+  background: var(--uv-logo-bg-color);
   order: 1;
+  aspect-ratio: cos(30deg);
+  clip-path: polygon(-50% 50%, 50% 100%, 150% 50%, 50% 0);
+  color: #fff;
+  text-decoration: none;
+  font-size: remval(30);
+  position: relative;
+
+  span {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+    text-align: center;
+    letter-spacing: remval(1);
+  }
 }
 
 .mobile-main-nav-button {
