--- a/src/styles/_props.scss
+++ b/src/styles/_props.scss
@@ -15,6 +15,7 @@
 
   // LOGO
   --uv-logo-bg-color: var(--uv-primary);
+  --uv-logo-hover-bg-color: var(--uv-primary-dark);
 
   // MAIN NAV
   --uv-main-nav-link-color: #eee;
